updating the data file name

--- a/_posts/2014-07-19-mouse-genotype-differences.html
+++ b/_posts/2014-07-19-mouse-genotype-differences.html
@@ -16,7 +16,7 @@
       <div id='heatmap'></div>
 
       <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-      <script src="data.json" charset="utf-8"></script>
+      <script src="mouse_data.json" charset="utf-8"></script>
    <script type="text/javascript">
    
 //height of each row in the heatmap
