--- a/_posts/2014-07-19-mouse-genotype-differences.html
+++ b/_posts/2014-07-19-mouse-genotype-differences.html
@@ -1,5 +1,10 @@
 <html>
    <head>
+    <!-- Bootstrap core CSS -->
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="/css/jumbotron-narrow.css" rel="stylesheet">
   <title>Mouse Genome Project SNP layout</title>
    <style>
       body {
