--- a/_posts/2014-07-19-mouse-genotype-differences.html
+++ b/_posts/2014-07-19-mouse-genotype-differences.html
@@ -14173,7 +14173,7 @@ var boxheight = gridSize*66;
 var legendElementWidth = gridSize*2.5;
 var maxValue = d3.max(data, function (d) { return d.value; })
 var chromeSpacer = gridSize*(17 + 7)
-var margin = {top: 50, right: 80, bottom: 30, left: 50},
+var margin = {top: 80, right: 80, bottom: 30, left: 50},
     width = 6000 - margin.left - margin.right,
     height = 1000 - margin.top - margin.bottom;
 colors = ['#005824','#1A693B','#347B53','#4F8D6B','#699F83','#83B09B','#9EC2B3','#B8D4CB','#D2E6E3','#EDF8FB','#FFFFFF','#F1EEF6','#E6D3E1','#DBB9CD','#D19EB9','#C684A4','#BB6990','#B14F7C','#A63467','#9B1A53','#91003F'];
@@ -14216,6 +14216,7 @@ var rowLabels = svg.append("g")
       ;
 
 colnames = ["X129P2","X129S1","X129S5","AJ","AKRJ","BALBcJ","C3HHeJ","CASTEiJ","CBAJ","DBA2J","FVBNJ","LPJ","NODShiLtJ","NZOHlLtJ","PWKPhJ","SPRETEiJ","WSBEiJ"];
+chromes = ["Chromosome 1","Chromosome 2","Chromosome 3","Chromosome 4","Chromosome 5","Chromosome 6","Chromosome 7","Chromosome 8","Chromosome 9","Chromosome 10","Chromosome 11","Chromosome 12","Chromosome 13","Chromosome 14","Chromosome 15","Chromosome 16","Chromosome 17","Chromosome 18","Chromosome 19"];
 for (var ff = 1; ff < 20; ff++) {
   var colLabels = svg.append("g")
       .selectAll(".colLabelg2")
@@ -14227,6 +14228,17 @@ for (var ff = 1; ff < 20; ff++) {
       .attr("x", function(d) { return -5; })
       .attr("transform", function(d) {return "rotate(-90)" })
   }
+
+var addChromes = svg.append("g")
+      .selectAll(".colLabelg2")
+      .data(chromes)
+      .enter()
+      .append("text")
+      .text(function (d) { return d; })
+      .attr("x", function(d,i) { return ((i) * chromeSpacer + chromeSpacer/4); })
+      .attr("y", function(d) { return -60; })
+      .attr("font-size", "16px")
+
 /* this generated some weird text, get rid of it
   var colLabels = svg.append("g")
       .selectAll(".colLabelg2")
