a little more space between chromes

--- a/_posts/2014-07-19-mouse-genotype-differences.html
+++ b/_posts/2014-07-19-mouse-genotype-differences.html
@@ -14172,7 +14172,7 @@ var buckets = 21;
 var boxheight = gridSize*66;
 var legendElementWidth = gridSize*2.5;
 var maxValue = d3.max(data, function (d) { return d.value; })
-var chromeSpacer = gridSize*(17 + 7)
+var chromeSpacer = gridSize*(17 + 7) + 10;
 var margin = {top: 80, right: 80, bottom: 30, left: 50},
     width = 6000 - margin.left - margin.right,
     height = 1000 - margin.top - margin.bottom;
