--- a/_posts/2014-08-04-Comut-plot-with-D3.html
+++ b/_posts/2014-08-04-Comut-plot-with-D3.html
@@ -95,7 +95,7 @@ var maxValue = 6; // the number of mutations
 //    heat_width = left_panel_total_width - heat_margin.left - heat_margin.right,
 //    heat_height = 550 - heat_margin.top - heat_margin.bottom;
 
-heatmap_colors = ['#efefef','#eff1ff','#bdd7e7','#6baed6','#3182bd','#08519c'];
+heatmap_colors = ['#efefef','#2b83ba','#abdda4','#ffffbf','#fdae61','#d7191c'];
 mutation_values = ["none","silent","splice site","missense","frameshift","nonsense"];
 
 var formatThousands = d3.format("0,000");
